admin_company e  user manage

--- a/app/templates/includes/user_menu.html
+++ b/app/templates/includes/user_menu.html
@@ -28,10 +28,10 @@
 
         {% if is_admin %}
         <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item text-dark" href="/admin/users">
+        <li><a class="dropdown-item text-dark" href="/admin/admin_manage_user">
             <i class="bi bi-person-x me-2"></i>Manage Users
         </a></li>
-        <li><a class="dropdown-item text-dark" href="/admin/companies">
+        <li><a class="dropdown-item text-dark" href="/admin/admin_manage_company">
             <i class="bi bi-building-x me-2"></i>Manage Companies
         </a></li>
         {% endif %}
