--- a/app/templates/manage_companies.html
+++ b/app/templates/manage_companies.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Company Catalog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/manage_companies.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='manage_companies.css') }}" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <style>
         /* Assicura che i pulsanti siano sopra l'immagine */
@@ -47,6 +47,20 @@
     <main class="flex-grow-1">
         <div class="container py-5 min-vh-100">
             <h1 class="text-center mb-5">Company Catalog</h1>
+            
+            {% if is_admin %}
+            <div class="row justify-content-center mb-4">
+                <div class="col-md-6">
+                    <form class="input-group" id="searchForm">
+                        <input type="text" class="form-control" placeholder="Search companies by name" 
+                               id="searchInput" name="query" value="{{ search_query }}">
+                        <button class="btn btn-primary" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+            {% endif %}
+
+
             <div class="row g-4" id="companyGrid">
                 {% for company in companies %}
                 <div class="col-lg-4 col-md-12 mb-4">
