--- a/app/templates/company_register.html
+++ b/app/templates/company_register.html
@@ -94,8 +94,8 @@
                             
                             <div class="mb-3">
                                 <label for="address" class="form-label">Address*</label>
-                                <textarea class="form-control" id="address" rows="2" required minlength="5"></textarea>
-                                <div class="invalid-feedback">Please enter a valid address (minimum 5 characters)</div>
+                                <textarea class="form-control" id="address" rows="2" required minlength="5" maxlength="100"></textarea>
+                                <div class="invalid-feedback">Please enter a valid address (minimum 5 characters and max 100 characters)</div>
                             </div>
                             <div class="mb-3">
                                 <label for="description" class="form-label">Company Description*</label>
